# server/swagger_output.json
@@ -384,6 +384,9 @@
           "201": {
             "description": "Created"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "401": {
             "description": "Unauthorized"
           },
@@ -442,12 +445,15 @@
         }
       }
     },
-    "/api/v1/auth/createPassword/{email}": {
+    "/api/v1/auth/createPassword/{token}": {
       "put": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "parameters": [
           {
-            "name": "email",
+            "name": "token",
             "in": "path",
             "required": true,
             "type": "string"
@@ -466,11 +472,20 @@
           }
         ],
         "responses": {
-          "201": {
-            "description": "Created"
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
@@ -564,7 +579,7 @@
         },
         "email": {
           "type": "string",
-          "example": "test@gmail.com"
+          "example": "aman.katal@lpinfotech.com"
         },
         "address": {
           "type": "object",
@@ -716,10 +731,6 @@
         "verifiedAt": {
           "type": "string",
           "example": ""
-        },
-        "isPasswordCreated": {
-          "type": "boolean",
-          "example": false
         }
       }
     }
